force-app/main/default/objects/SEG_Duplicate_Case__c/SEG_Duplicate_Case__c.object-meta.xml
<CustomObject>
    <label>Duplicado</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Duplicate Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>