force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_Case_Duplicated__c.field-meta.xml
<CustomField>
    <fullName>SEG_Case_Duplicated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Duplicados</relationshipLabel>
    <relationshipName>SRsDuplicadas</relationshipName>
    <type>Lookup</type>
</CustomField>