force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_Estado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Estado__c</fullName>
    <description>Campo Estado</description>
    <formula>TEXT(SEG_Case_Duplicated__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estado</inlineHelpText>
    <label>Estado</label>
    <type>Text</type>
</CustomField>