force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_Grupo_de_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupo_de_Trabajo__c</fullName>
    <description>Campo Grupo de Trabajo</description>
    <formula>SEG_Case_Duplicated__r.SEG_Grupo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grupo de trabajo</inlineHelpText>
    <label>Grupo de Trabajo</label>
    <type>Text</type>
</CustomField>