force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_Organizaci_n__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizaci_n__c</fullName>
    <description>Campo Organización</description>
    <formula>TEXT(SEG_Case_Duplicated__r.SEG_Organizacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Organización</inlineHelpText>
    <label>Organizacion</label>
    <type>Text</type>
</CustomField>