force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_Propietario__c.field-meta.xml
<CustomField>
    <fullName>SEG_Propietario__c</fullName>
    <description>Camp propietario</description>
    <formula>IF(
ISBLANK(SEG_Case_Duplicated__r.Owner:User.Id), /* If blank, it&apos;s a queue */
SEG_Case_Duplicated__r.Owner:Queue.QueueName,
SEG_Case_Duplicated__r.Owner:User.FirstName &amp; &quot; &quot; &amp; SEG_Case_Duplicated__r.Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Propietario</inlineHelpText>
    <label>Propietario</label>
    <type>Text</type>
</CustomField>