force-app/main/default/objects/SEG_Duplicate_Case__c/fields/SEG_zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_zona__c</fullName>
    <description>Campo Zona</description>
    <formula>TEXT(SEG_Case_Duplicated__r.SEG_Zona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zona</inlineHelpText>
    <label>Zona</label>
    <type>Text</type>
</CustomField>